--- a/SeeSharpIndexer/App.xaml
+++ b/SeeSharpIndexer/App.xaml
@@ -8,7 +8,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Dark" PrimaryColor="Teal" SecondaryColor="Amber"/>
+                <materialDesign:BundledTheme BaseTheme="Dark" PrimaryColor="DeepPurple" SecondaryColor="Lime"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
             
@@ -20,24 +20,48 @@
 
             <!-- Styles -->
             <Style x:Key="ActionButtonStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
-                <Setter Property="Margin" Value="4"/>
-                <Setter Property="Padding" Value="8"/>
+                <Setter Property="Margin" Value="6"/>
+                <Setter Property="Padding" Value="16 12"/>
+                <Setter Property="Height" Value="48"/>
+                <Setter Property="FontWeight" Value="Medium"/>
+                <Setter Property="FontSize" Value="13"/>
                 <Setter Property="FocusManager.IsFocusScope" Value="False"/>
+                <Setter Property="materialDesign:ButtonAssist.CornerRadius" Value="24"/>
+                <Setter Property="materialDesign:ElevationAssist.Elevation" Value="Dp2"/>
+                <Setter Property="materialDesign:ShadowAssist.ShadowDepth" Value="Depth1"/>
+                <Setter Property="Background" Value="#6E50F2"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="BorderThickness" Value="0"/>
+            </Style>
+
+            <Style x:Key="PrimaryActionButtonStyle" TargetType="Button" BasedOn="{StaticResource ActionButtonStyle}">
+                <Setter Property="Background" Value="#8D62F7"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Height" Value="52"/>
+            </Style>
+            
+            <Style x:Key="SecondaryActionButtonStyle" TargetType="Button" BasedOn="{StaticResource ActionButtonStyle}">
+                <Setter Property="Background" Value="#9F84F4"/>
+                <Setter Property="Foreground" Value="White"/>
             </Style>
 
             <Style x:Key="ActionIconButtonStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignIconButton}">
                 <Setter Property="Margin" Value="4 0"/>
-                <Setter Property="Foreground" Value="{DynamicResource PrimaryHueDarkForegroundBrush}"/>
+                <Setter Property="Foreground" Value="{DynamicResource PrimaryHueMidForegroundBrush}"/>
+                <Setter Property="Background" Value="Transparent"/>
+                <Setter Property="materialDesign:RippleAssist.Feedback" Value="{DynamicResource MaterialDesignRippleBrush}"/>
             </Style>
 
             <Style x:Key="HeaderTextStyle" TargetType="TextBlock">
-                <Setter Property="FontWeight" Value="Medium"/>
-                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="Foreground" Value="{DynamicResource PrimaryHueDarkBrush}"/>
             </Style>
 
             <Style x:Key="SubHeaderTextStyle" TargetType="TextBlock">
                 <Setter Property="FontWeight" Value="Medium"/>
-                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="Foreground" Value="{DynamicResource PrimaryHueMidBrush}"/>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
